# Intelligent-Edge-in-a-Day

./: .gitignore  Hardware.md  IoT-PnP-Prep.md  LabFlow.md  README.md  prep-rp4.sh
DCM/: RP4-SensorTile.box.json
Postman/: IoT Central Preview.postman_collection.json
SensorTile.box/: CMakeLists.txt  main.c
lab02/: IoT-PnP-CloudFirstProvision-Manual.md  IoT-PnP-CodeGen.md  IoT-PnP-DeviceFirstProvisioning.md  IoT-PnP-DeviceIdentity-API.md  IoT-PnP-DeviceIdentity-Manual.md  IoT-PnP-DeviceIdentity.md  IoT-PnP-DeviceSpecificCode.md  IoT-PnP-Prep-Posman.md  IoT-PnP-Prep.md  instructor-setup.md  setup-pi.sh
lab02/DeviceFirst/: azure1_impl.c
lab02/DeviceFirstProvision/: azure1_impl.c  main.c
lab02/DeviceFirstProvisioning/: main.c
lab02/Postman/: IoT Central Preview.postman_collection.json
lab02/SensorTile.box/: README.md  azure1_impl.h  pnp_device.c  pnp_device.h
lab02/keygen/arm64/: keygen
